--- a/index.html
+++ b/index.html
@@ -5,5 +5,35 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-    <h1>"Hello World, We are software Engineers"</h1>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="text-center">DR SAMSON SURAFEL </h1>
+        <h2 class="text-center"><em>The man from Addis Ababa</em></h2>
+        <div class="thumbnail"><img src="https://i.guim.co.uk/img/media/4ed7ff64417fbc78f0f42449c6b77e8e7d6d1362/1170_363_3563_2138/master/3563.jpg?width=1200&height=630&quality=85&auto=format&fit=crop&overlay-align=bottom%2Cleft&overlay-width=100p&overlay-base64=L2ltZy9zdGF0aWMvb3ZlcmxheXMvdGctZGVmYXVsdC5wbmc&s=58214e5a4e5a525299c914efffae0b4f">
+          <div class="caption text-center">Dr Samson with his children.</div>
+        </div>
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+          <h3>Here's a time line of Dr. Samson's life:</h3>
+          <ul>
+            <li><strong>1970</strong> - Born in Addis Ababa</li>
+            <li><strong>1933</strong> - Schooled in Adis Ababa</li>
+            <li><strong>1935</strong> - Ate Hijar in Adis</li>
+            <li><strong>2009</strong> - Traveled to Europe</li>      
+          </ul>
+          <blockquote>
+            <p>"Dr Samson is a very strong man"</p>
+            <footer><cite>Microverse Collaborator Cyril Okereafor</cite></footer>
+          </blockquote>
+          <h3>If you have time, you should read more about this incredible human being on his <a href="https://bbc.com" target="_blank">BBC Tribute page</a>.</h3>
+        </div>
+      </div>
+    </div> 
+  </div>
+  <footer class="text-center">
+    <hr>
+    <p>Written and coded by Surafel Samson.</p>
+  </footer>  
+</div>  
     
